vendor/feedvalidator/demo/testcases/opml/errors/outlinesInWrongPlaces.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:  <outline> nodes in the wrong place
  Expect:       UndefinedElement{parent:head,element:outline}
-->

<opml version="1.1">
	<head>
		<title>Unknown outline type</title>
		<outline text="This is in a wrong place."/>
		</head>
	<body>
		<outline text="This is in a right place."/>
		</body>
	<outline text="This is in a wrong place."/>
	</opml>
